TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_after.dot
digraph AST {
  "137168701130448" [label="Start"];
  "137168701130448" -> "137168701136832";
  "137168701136832" [label="Code"];
  "137168701136832" -> "137168701136880";
  "137168701136880" [label="Function"];
  "137168701136880" -> "137168701136976";
  "137168701136880" -> "137168701137024";
  "137168701136880" -> "137168701137072";
  "137168701136976" [label="main IDENTIFIER"];
  "137168701137024" [label="Parameters"];
  "137168701137072" [label="Code"];
  "137168701137072" -> "137168701137168";
  "137168701137072" -> "137168701137216";
  "137168701137072" -> "137168701137312";
  "137168701137168" [label="Code"];
  "137168701137168" -> "137168701137264";
  "137168701137264" [label="Declaration"];
  "137168701137264" -> "137168701137360";
  "137168701137264" -> "137168701137408";
  "137168701137360" [label="x IDENTIFIER"];
  "137168701137408" [label="1 INT"];
  "137168701137216" [label="Code"];
  "137168701137216" -> "137168701137456";
  "137168701137456" [label="Declaration"];
  "137168701137456" -> "137168701137552";
  "137168701137456" -> "137168701137600";
  "137168701137552" [label="x IDENTIFIER"];
  "137168701137600" [label="2 INT"];
  "137168701137312" [label="Return"];
  "137168701137312" -> "137168701137648";
  "137168701137648" [label="0 INT"];
}
